--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -13,5 +13,5 @@
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="New 1 Page : )"></app-explore-container>
+  <app-explore-container name="First Page -> 1!!! -> 2!!! -> 3!!! -> 4!!! -> 5!!! -> 6!!! -> 7!!! -> 8!!! -> 9!!! -> 10!!! -> 11!!!"></app-explore-container>
 </ion-content>
